<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:id="@+id/containerLayout">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/containerNavigazione"
        android:orientation="horizontal"
        android:background="@color/background"
        android:layout_margin="10dp"
        android:visibility="visible">

        <include layout="@layout/btn_indietro"></include>
        <include layout="@layout/btn_home"></include>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/btnAvanti"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_avanti"
            android:background="@color/background"
            android:contentDescription="@string/avanti"
            android:visibility="visible"/>

    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:gravity="center">

        <include layout="@layout/linea_oriz"/>

        <TextView
            android:id="@+id/device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome_dispositivo"
            android:layout_marginVertical="20dp"
            android:textAllCaps="true"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/dispNonConnesso"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@drawable/sfondo_connect"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnProsegui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@color/background"
            android:textColor="@color/blue"
            app:strokeColor="@color/btnBordo"
            app:strokeWidth="2dp"
            android:drawableRight="@drawable/ic_avanti"
            android:text="Prosegui"
            android:visibility="gone"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone">
            </View>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="10dp"
            android:background="@drawable/btn_border"
            android:layout_margin="5dp">

            <ImageButton
                android:id="@+id/btnConnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:background="@drawable/ic_bluetooth"
                android:textColor="@color/textBtn"
                app:strokeColor="@color/btnBordo"
                app:strokeWidth="2dp"/>

            <TextView
                android:id="@+id/txtbtnConnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_connect"
                android:textColor="@color/blue"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>